# pepe

./: .gitignore  README.md  filechecker.sh  pepes.txt  piratepepe.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  check_types.yml  ruff.yml
piratepepe/: __main__.py
