[tool.poetry]
name = "pepe"
version = "0.1.0"
description = "Download the official Matt Furie PEPE NFTs"
license = "MIT"
authors = ["Kieran Gee <kieran.lost.the.game@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
colorama = "^0.4.6"
python-magic = "^0.4.27"

[tool.poetry.group.dev.dependencies]
pylance = "^0.10.15"
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = "~/.cache/ruff"
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-fixable = ["B"]
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    #### modules
    # "ANN", # flake8-annotations
    # "COM", # flake8-commas
    # "C90", # mccabe complexity
    # "DJ",  # django
    # "EXE", # flake8-executable
    # "T10", # debugger
    # "TID", # flake8-tidy-imports
    "PTH", # KG builtin-open is fine

    #### specific rules
    "E402",   # false positives for local imports
    "TRY003", # external messages in exceptions are too verbose
    "FIX002", # too verbose descriptions of todos
    "T201", # KG print is fine for this scale
    "PLW0603", # KG globals are fine for this scale
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 40
