[tool.poetry]
name = "pepe"
version = "0.1.0"
description = "Download the official Matt Furie PEPE NFTs"
license = "MIT"
authors = ["Kieran Gee <kieran.lost.the.game@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
colorama = "^0.4.6"
python-magic = "^0.4.27"

[tool.poetry.group.dev.dependencies]
pylance = "*"
ruff = "*"
mypy = "*"
types-requests = "*"
types-colorama = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = "~/.cache/ruff"
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-fixable = ["B", "I001"]
select = ["ALL"] # include all the rules, including new ones
ignore = [
    # Modules
    "DJ",  # Django
    "PTH", # builtin open is fine

    # Specific rules
    "T201", # Print is fine at this scale
    "TD002", # Verbose TODO, only I work on this project
    "TD002", # Verbose TODO, only I work on this project
    "TD003", # Verbose TODO, only I work on this project
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 40

[tool.mypy]
files = ["{{cookiecutter.__app_package}}", "tests"]
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = false
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
    "type-arg",
]
